--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.status {
+		border-bottom: solid 1px #CCC; 
+		padding: 5 px 0
+
+}
+
+.status.hover {background: #FAFAFA;}
+.status p {
+margin: 4px 0;
+}
+.status .admin {display: none;}
+
+.status.hover .admin {display: inline;}
